--- a/tgex/src/main/resources/application.properties
+++ b/tgex/src/main/resources/application.properties
@@ -5,4 +5,10 @@ spring.datasource.password=
 
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
 
-spring.jpa.hibernate.ddl-auto = update
+spring.jpa.hibernate.ddl-auto = none
+
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.show-sql=true
+logging.level.org.hibernate.SQL=debug
+
+upload.path=file_upload/poster/
