--- a/tgex/src/main/resources/application.properties
+++ b/tgex/src/main/resources/application.properties
@@ -12,3 +12,12 @@ spring.jpa.show-sql=true
 logging.level.org.hibernate.SQL=debug
 
 upload.path=file_upload/poster/
+
+# Cấu hình CORS cho tất cả các URL
+spring.mvc.cors.allowed-origins=*
+spring.mvc.cors.allowed-methods=GET,POST,PUT,DELETE
+spring.mvc.cors.allow-credentials=true
+spring.mvc.cors.max-age=288000
+
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
