--- a/tgex/src/main/resources/application.properties
+++ b/tgex/src/main/resources/application.properties
@@ -21,3 +21,6 @@ spring.mvc.cors.max-age=288000
 
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
+
+spring.resources.static-locations=classpath:/static/,file:upload/
+
